--- a/app/src/main/res/layout/post_item_view_client_side.xml
+++ b/app/src/main/res/layout/post_item_view_client_side.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="center_vertical"
+
         >
         <TextView
             android:id="@+id/tvTitle"
@@ -21,6 +21,16 @@
             android:textColor="@color/HardGreen"
             android:textStyle="bold"
             />
+        <TextView
+            android:id="@+id/tvBudget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4000"
+            android:textColor="@color/HardGreen"
+            android:textStyle="bold"
+            android:layout_marginStart="@dimen/_30sdp"
+            android:textSize="@dimen/_15ssp"/>
+
     </LinearLayout>
     <LinearLayout
         android:id="@+id/timeLL"
@@ -65,12 +75,36 @@
             android:id="@+id/tvAddress"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_30sdp"
-            android:text="496332, Raipur(C.G.), Colony Number - 23, Near Hanuman mandir"
+            android:text="496332, Raipur(C.G.), Colony Number - mandir"
+            android:textSize="@dimen/_9ssp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/sizeLL"
+        android:layout_marginTop="@dimen/_2sdp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/addressLL"
+        app:layout_constraintStart_toStartOf="@id/addressLL"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/workDesc"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Size/Dimension - "
+            android:textSize="@dimen/_13ssp"
+            android:textColor="@color/black"/>
+        <TextView
+            android:id="@+id/tvSize"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_30sdp"
+            android:text="anakd "
             android:textSize="@dimen/_9ssp"/>
     </LinearLayout>
     <TextView
         android:id="@+id/workDesc"
-        android:layout_marginTop="@dimen/_6sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/addressLL"
