--- a/app/src/main/res/layout/post_item_view_client_side.xml
+++ b/app/src/main/res/layout/post_item_view_client_side.xml
@@ -23,7 +23,7 @@
             />
         <TextView
             android:id="@+id/tvBudget"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_60sdp"
             android:layout_height="wrap_content"
             android:text="4000"
             android:textColor="@color/HardGreen"
